--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -297,3 +297,162 @@ Tools / get corePlugins / list3 / 2: |-
     "backdropSaturate",
     "backdropSepia"
   ]
+Tools / resolve dynamic utilities / with-plugins / 1: |-
+  [
+    "container",
+    "space",
+    "divide",
+    "bg",
+    "from",
+    "via",
+    "to",
+    "border",
+    "rounded",
+    "cursor",
+    "flex",
+    "order",
+    "font",
+    "h",
+    "leading",
+    "list",
+    "m",
+    "my",
+    "mx",
+    "mt",
+    "mr",
+    "mb",
+    "ml",
+    "min",
+    "max",
+    "object",
+    "opacity",
+    "outline",
+    "p",
+    "py",
+    "px",
+    "pt",
+    "pr",
+    "pb",
+    "pl",
+    "placeholder",
+    "inset",
+    "top",
+    "right",
+    "bottom",
+    "left",
+    "shadow",
+    "ring",
+    "blur",
+    "brightness",
+    "contrast",
+    "drop",
+    "grayscale",
+    "hue",
+    "invert",
+    "saturate",
+    "sepia",
+    "backdrop",
+    "fill",
+    "stroke",
+    "text",
+    "tracking",
+    "w",
+    "z",
+    "gap",
+    "auto",
+    "grid",
+    "col",
+    "row",
+    "origin",
+    "scale",
+    "rotate",
+    "translate",
+    "skew",
+    "transition",
+    "ease",
+    "duration",
+    "delay",
+    "animate",
+    "filter",
+    "aspect-w",
+    "aspect-h",
+    "aspect",
+    "line-clamp"
+  ]
+Tools / resolve dynamic utilities / without-plugins / 0: |-
+  [
+    "container",
+    "space",
+    "divide",
+    "bg",
+    "from",
+    "via",
+    "to",
+    "border",
+    "rounded",
+    "cursor",
+    "flex",
+    "order",
+    "font",
+    "h",
+    "leading",
+    "list",
+    "m",
+    "my",
+    "mx",
+    "mt",
+    "mr",
+    "mb",
+    "ml",
+    "min",
+    "max",
+    "object",
+    "opacity",
+    "outline",
+    "p",
+    "py",
+    "px",
+    "pt",
+    "pr",
+    "pb",
+    "pl",
+    "placeholder",
+    "inset",
+    "top",
+    "right",
+    "bottom",
+    "left",
+    "shadow",
+    "ring",
+    "blur",
+    "brightness",
+    "contrast",
+    "drop",
+    "grayscale",
+    "hue",
+    "invert",
+    "saturate",
+    "sepia",
+    "backdrop",
+    "fill",
+    "stroke",
+    "text",
+    "tracking",
+    "w",
+    "z",
+    "gap",
+    "auto",
+    "grid",
+    "col",
+    "row",
+    "origin",
+    "scale",
+    "rotate",
+    "translate",
+    "skew",
+    "transition",
+    "ease",
+    "duration",
+    "delay",
+    "animate"
+  ]
