--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -1296,6 +1296,40 @@ Tools / with ring utility / css / 0: |-
   [ring~="opacity-50"] {
     --tw-ring-opacity: 0.5;
   }
+Tools / with shadow utility / css / 0: |-
+  [shadow~="default"] {
+    --tw-shadow-color: 0, 0, 0;
+    --tw-shadow: 0 1px 3px 0 rgba(var(--tw-shadow-color), 0.1), 0 1px 2px 0 rgba(var(--tw-shadow-color), 0.06);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  [shadow~="sm"] {
+    --tw-shadow-color: 0, 0, 0;
+    --tw-shadow: 0 1px 2px 0 rgba(var(--tw-shadow-color), 0.05);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  [shadow~="md"] {
+    --tw-shadow-color: 0, 0, 0;
+    --tw-shadow: 0 4px 6px -1px rgba(var(--tw-shadow-color), 0.1), 0 2px 4px -1px rgba(var(--tw-shadow-color), 0.06);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  [shadow~="inner"] {
+    --tw-shadow-color: 0, 0, 0;
+    --tw-shadow: inset 0 2px 4px 0 rgba(var(--tw-shadow-color), 0.06);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  [shadow~="none"] {
+    --tw-shadow-color: 0, 0, 0;
+    --tw-shadow: none;
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  [shadow~="gray-400"] {
+    --tw-shadow-color: 156, 163, 175;
+  }
 Tools / with table utility / css / 0: |-
   [table~="default"] {
     display: table;
